@@ -67,6 +67,23 @@ it is closed.
 \versionadded[The \var{delete} parameter]{2.6}
 \end{funcdesc}
 
+\begin{funcdesc}{SpooledTemporaryFile}{\optional{max\_size=\code{0},
+                                \optional{mode=\code{'w+b'}\optional{,
+                                bufsize=\code{-1}\optional{,
+                                suffix\optional{, prefix\optional{,
+                                dir}}}}}}}
+This function operates exactly as \function{TemporaryFile()} does,
+except that data is spooled in memory until the file size exceeds
+\var{max_size}, or until the file's \function{fileno()} method is
+called, at which point the contents are written to disk and operation
+proceeds as with \function{TemporaryFile()}.
+
+The resulting file has one additional method, \function{rollover()},
+which causes the file to roll over to an on-disk file regardless of
+its size.
+\versionadded{2.6}
+\end{funcdesc}
+
 \begin{funcdesc}{mkstemp}{\optional{suffix\optional{,
                           prefix\optional{, dir\optional{, text}}}}}
 Creates a temporary file in the most secure manner possible.  There
